# Single-cell-foundation-model

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cellfm/: __init__.py  __main__.py  cli.py  config.py  convert.py  data.py  embedding.py  export.py  inference.py  lora.py  metrics.py  model.py  retention.py  sglu.py  trainer.py  visualization.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  LAYMAN_GUIDE.md
tests/: test_cli.py  test_convert.py  test_data.py  test_inference.py  test_metrics.py  test_model.py  test_trainer.py  test_visualization.py
